part-4/exercise_4.01/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-app
  namespace: logoutput
  labels:
    app: log-output-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output-app
  template:
    metadata:
      labels:
        app: log-output-app
    spec:
      containers:
      - name: logoutput
        image: juhosii/devops-kubernetes:4.01.111
        readinessProbe:
          initialDelaySeconds: 15
          periodSeconds: 10
          httpGet:
            path: /healthz
            port: 3001
        resources:
          requests:
            memory: "32Mi"
            cpu: "150m"
          limits:
            memory: "256Mi"
            cpu: "400m"
        ports:
        - containerPort: 3001
        volumeMounts:
        - name: config-volume
          mountPath: /usr/src/app/config
          readOnly: true
      volumes:
      - name: config-volume
        configMap:
          name: logoutput-config
          items:
          - key: information.txt
            path: information.txt
