part-4/exercise_4.01/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: log-output-ingress
  namespace: logoutput
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: pingpong-service
            port:
              number: 8082
      - path: /
        pathType: Prefix
        backend:
          service:
            name: log-output-service
            port:
              number: 8082
